--- a/frontend/templates/frontend/frontend_base.html
+++ b/frontend/templates/frontend/frontend_base.html
@@ -323,6 +323,8 @@
 <script src="{% static 'dashboard/vendor/sticky-js/sticky.min.js' %}"></script>
 <script src="{% static 'dashboard/vendor/nouislider/nouislider.min.js' %}"></script>
 <script src="{% static 'dashboard/js/functions.js' %}"></script>
+<script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
+<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 {% block js %}
 
 
